--- a/config/locales/devise.nl.yml
+++ b/config/locales/devise.nl.yml
@@ -1,10 +1,32 @@
 nl:
   devise:
+    invitations:
+      send_instructions: "Een uitnodigingsmail aan %{email} is verstuurd."
+      invitation_token_invalid: "De uitnodigingscode is ongeldig!"
+      updated: "Uw wachtwoord is ingesteld. U bent nu ingelogd."
+      updated_not_active: "Uw wachtwoord is ingesteld."
+      no_invitations_remaining: "Geen uitnodigingen over."
+      invitation_removed: "Uw uitnodiging is verwijderd."
+      new:
+        header: "Verstuur uitnodiging"
+        submit_button: "Verstuur een uitnodiging"
+      edit:
+        header: "Stel Uw wachtwoord in"
+        submit_button: "Stel mijn wachtwoord in"
+    mailer:
+      invitation_instructions:
+        subject: "Instructies voor uitnodigingen"
+        hello: "Beste %{email}"
+        someone_invited_you: "Iemand heeft U uitgenodigd voor %{url}, U kunt de uitnodiging accepteren via onderstaande link."
+        accept: "Accepteer uitnodiging"
+        accept_until: "Deze uitnodoging vervalt per %{due_date}."
+        ignore: "Indien U de uitnodiging niet wenst te accepteren, negeer dan alstublieft deze email.<br />\nUw account wordt niet aangemaakt indien U niet via bovenstaande link uw wachtwoord aanmaakt."
     confirmations:
       confirmed: 'Je account is bevestigd.'
       send_instructions: 'Je ontvangt via e-mail instructies hoe je je account kan bevestigen.'
       send_paranoid_instructions: 'Als je e-mailadres bestaat in de database, ontvang je via e-mail instructies hoe je je account kan bevestigen.'
     failure:
+      invited: "U bent reeds uitgenodigd, accepteer de uitnodiging die u heeft ontvangen per mail om uw account te accepteren."
       already_authenticated: 'Je bent al ingelogd.'
       unauthenticated: 'Je dient in te loggen of je in te schrijven.'
       unconfirmed: 'Je dient eerst je account te bevestigen.'
