--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -17,6 +17,13 @@ en:
       unauthenticated: "You need to sign in or sign up before continuing."
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
+      invitation_instructions:
+        subject: "Welkom bij Hamers"
+        hello: "Beste Aspirant"
+        someone_invited_you: "Je bent uitgenodigt deel te nemen aan het aspiranten traject van Hamers zonder Sikkel."
+        accept: "Accepteer uitnodiging"
+        accept_until: "Deze uitnodoging vervalt per %{due_date}."
+        ignore: ""
       confirmation_instructions:
         subject: "Confirmation instructions"
       reset_password_instructions:
