Remove placeholders as the message would be identical to the label

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -10,7 +10,10 @@ nl:
     attributes:
       user:
         birthday: Verjaardag
+        current_password: Huidige wachtwoord
         phone_number: Telefoonnummer
+        password: Wachtwoord
+        password_confirmation: Wachtwoordbevestiging
     errors:
       messages:
         record_invalid: 'Validatie mislukt: %{errors}'
