Tailwindify settings page(s) (#228)
* WIP

* More work on settings page

* WIP

* Fix route

* Begin with split

* Use heroicons and for loop to significantly cleanup the menu code

* Install heroicon_rails gem

* Use heroicons in breadcrumbs

* Use heroicon gem in header nav

* A lot of work

* Implement api change view

* Fix table border

* Remove password shit from profile change

* Use dropdown menu when on mobile

* Fix breadcrumbs

* Newlines

* Feedback

* Remove placeholders as the message would be identical to the label

* Route feedback

* Feedback profile form

* Feedback rawkey

* lg -> md

* user_id

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -7,6 +7,13 @@ nl:
   apipie:
     api_documentation: "Hamers API"
   activerecord:
+    attributes:
+      user:
+        birthday: Verjaardag
+        current_password: Huidige wachtwoord
+        phone_number: Telefoonnummer
+        password: Wachtwoord
+        password_confirmation: Wachtwoordbevestiging
     errors:
       messages:
         record_invalid: 'Validatie mislukt: %{errors}'
