Rename kind column + translations

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -7,6 +7,20 @@ nl:
   apipie:
     api_documentation: "Hamers API"
   activerecord:
+    attributes:
+      user:
+        birthday: Verjaardag
+        current_password: Huidige wachtwoord
+        phone_number: Telefoonnummer
+        password: Wachtwoord
+        password_confirmation: Wachtwoordbevestiging
+      beer:
+        brewer: Brouwerij
+        country: Land
+        kind: Soort
+        name: Naam
+        percentage: Percentage
+        picture: Afbeelding
     errors:
       messages:
         record_invalid: 'Validatie mislukt: %{errors}'
@@ -214,7 +228,3 @@ nl:
       long: "%d %B %Y %H:%M"
       short: "%d %b %H:%M"
     pm: "'s middags"
-
-  will_paginate:
-    previous_label: "&#8592;"
-    next_label: "&#8594;"
