Use frontend helper for label_classes and move batch to profile form

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -9,6 +9,7 @@ nl:
   activerecord:
     attributes:
       user:
+        batch: Lichting
         birthday: Verjaardag
         current_password: Huidige wachtwoord
         phone_number: Telefoonnummer
